--- a/src/partials/buttons.html
+++ b/src/partials/buttons.html
@@ -1,8 +1,8 @@
 <div class="btn-container">
-  <button type="button" class="load-more material-symbols-outlined">
-    more_horiz
+  <button type="button" class="button">
+    load m
   </button>
-  <button type="button" class="close-btn material-symbols-outlined">
+  <button type="button" class="close-btn ">
     close
   </button>
 </div>
