--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,7 +1,7 @@
 <div class="search-container">
   <form class="search-container__form" id="search-form">
     <input type="text" name="searchQuery" autocomplete="off" />
-    <button class="search-btn " type="submit" name="submitBtn">
+    <button class="search-btn material-symbols-outlined" type="submit" name="submitBtn">
       search
     </button>
   </form>
