--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,27 +1,31 @@
 .btn-container {
-  position: relative;
-  height: 100%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+ 
+  text-align: center;
+ align-items: center;
+ 
+ 
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  justify-content: center; 
 
-  .button,
-  .close-btn {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    right: 30px;
-    background: #fff;
-    border-radius: 50%;
-    border: 1px solid #444;
-    &:hover {
-      color: #fff;
-      background: #444;
-      border-radius: 50%;
-      border: 1px solid #444;
-    }
+ & .load-more{
+  width: 300px;
+  font-family:'Times New Roman', Times, serif;
+  background-color: #df752a;
+  color: aliceblue;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 20px;
+ }
+  .close-btn{
+     background-color: #bfee49;
+     padding: 21px;
+  border-radius: 8px;
+  margin: 20px;
   }
-   .button {
-    bottom: 20px;
-  }
-  .close-btn {
-    bottom: 80px;
-  }
+ 
 }
