--- a/src/sass/_photo-card.scss
+++ b/src/sass/_photo-card.scss
@@ -21,7 +21,7 @@
         height: 130px;
         object-fit: cover;
         border-radius: 5px;
-        // -webkit-transform: scale(1);
+        -webkit-transform: scale(1);
         transition: transform 0.5s ease;
       }
     }
